--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,7 +115,7 @@
                 <!-- Recent Customers -->
                 <div class="col-md-6 mb-4">
                     <div class="card h-100">
-                      <h5 class="card-title mb-0"> <i class="fas fa-users me-2"></i>Recent Customers</h5>
+                      <h5 class="card-title mb-0"> <i class="fas fa-users me-2"></i>Admin Users</h5>
                         <div class="card-body">
                             <div class="table-responsive">
                                 <table class="table table-striped table-hover customer-table">
